# crm

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  cliff.toml  deny.toml  rustfmt.toml
.github/workflows/: build.yml
crm/: Cargo.toml  build.rs
crm/src/: client.rs  server.rs
crm/src/abi/: crm.rs
protos/: crm.proto
