[workspace]
members = ["crm"]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0.103"
prost = "0.14.4"
prost-build = "0.14.4"
prost-types = "0.14.4"
tonic = { version = "0.14.6", features = ["zstd", "tls-native-roots"] }
tonic-prost-build = "0.14.6"
tonic-prost = "0.14.6"
tokio = { version = "1.52.3", features = ["rt", "rt-multi-thread", "macros", "net", "fs", "io-util"] }
